Add assignee checks for case processing actions (#137)